--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div class="container">
         <h1>Bienvenue au College de bois de Bologne</h1>
         <p>Étudiant : <span id="nom_etudiant">Oussama Derbel</span></p>
+        <p>Environnement : <span id="nom_etudiant">Developpement</span></p>
     </div>
 </body>
 </html>
